# photo-renamer

./: README.md  pyproject.toml
src/: main.py
src/photo_renamer/: logic.py
tests/: test_renamer.py
